--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/main.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start:worker": "node src/main.js"
   },
   "engines": {
@@ -18,5 +18,17 @@
     "dotenv": "^16.3.1",
     "node-fetch": "^3.3.2",
     "openai": "^4.4.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.20",
+    "@babel/preset-env": "^7.22.20",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {
+      "\\.[jt]sx?$": "babel-jest"
+    }
   }
 }
