--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start:daily:job" : "node src/daily-job.js"
   },
   "engines": {
-    "node": ">=18.17.1"
+    "node": "18.x"
   },
   "author": "@karloscodes",
   "license": "ISC",
